--- a/Saga FateStayNight/FateStayNight Movie Heaven's Feel/CAPS/styles.css
+++ b/Saga FateStayNight/FateStayNight Movie Heaven's Feel/CAPS/styles.css
@@ -1,191 +1,305 @@
 * {
+
     margin: 0;
+
     padding: 0;
+
     box-sizing: border-box;
+
     font-family: Arial, sans-serif;
+
 }
+
+
 
 body {
-    background-color: #121212;
-    color: #ffffff;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-    height: 100vh;
+
+    background-color: #000;
+
+    color: #fff;
+
+    font-family: Arial, sans-serif;
+
     margin: 0;
+
+    padding: 0;
+
 }
+
+
+
+.container {
+
+    width: 80%;
+
+    margin: 0 auto;
+
+}
+
+
 
 header {
+
     width: 100%;
+
     padding: 20px;
+
     background-color: #1e1e1e;
+
     display: flex;
-    justify-content: space-between;
+
     align-items: center;
+
     border-bottom: 1px solid #333;
+
 }
 
-h1 {
-    font-size: 24px;
-    color: #ffffff;
+
+
+header .container {
+
+    display: flex;
+
+    justify-content: space-between; /* Ajusta el espacio entre elementos */
+
+    align-items: center;
+
+    width: 100%;
+
 }
 
-.btn-return {
+
+
+header h1 {
+
+    margin: 0;
+
+    font-size: 20px;
+
+}
+
+
+
+.btn {
+
     padding: 10px 20px;
+
     background-color: #333;
+
     color: #ffffff;
+
     text-decoration: none;
+
     border-radius: 5px;
+
     transition: background-color 0.3s ease;
+
 }
 
-.btn-return:hover {
+
+
+.btn:hover {
+
     background-color: #555;
+
 }
+
+
 
 .content {
+
     flex: 1;
+
     display: flex;
+
     justify-content: center;
+
     align-items: flex-start;
+
     padding: 20px;
+
 }
 
-.video-description-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+
+
+.poster {
+
     width: 100%;
-    max-width: 1200px;
-    margin-top: 20px;
-    position: relative;
+
+    max-width: 260px;
+
+    height: auto;
+
+    margin: 0 auto 20px auto;
+
+    overflow: hidden;
+
+    margin-left: 20px;
+
 }
 
-.video-frame {
+
+
+.poster img {
+
     width: 100%;
-    max-width: 1000px;
-    margin-bottom: 20px;
+
+    height: auto;
+
+    display: block;
+
 }
 
-.video-frame iframe {
-    width: 100%;
-    height: 500px;
-    border: none;
-    border-radius: 5px;
+
+
+.info {
+
+    overflow: hidden;
+
 }
 
-.description-box {
-    background-color: #1e1e1e;
-    padding: 20px;
-    border-radius: 10px;
-    width: 100%;
-    max-width: 800px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    color: #d3d3d3;
+
+
+.info h2 {
+
+    font-size: 24px;
+
+    text-align: center;
+
+}
+
+
+
+.info p {
+
     font-size: 16px;
-    line-height: 1.5;
-    order: 4;
+
+    margin-bottom: 20px;
+
+    text-align: center;
+
 }
 
-button.prev, button.next {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    background-color: rgba(0, 0, 0, 0.5);
-    border: none;
-    color: white;
-    font-size: 2em;
-    padding: 10px;
-    cursor: pointer;
-    z-index: 1;
-    outline: none;
+
+
+.episode-list {
+
+    background-color: #222;
+
+    padding: 20px;
+
+    border-radius: 5px;
+
 }
 
-button.prev {
-    left: 0;
+
+
+.episode-list ul {
+
+    list-style-type: none;
+
+    padding: 0;
+
+    margin: 0;
+
 }
 
-button.next {
-    right: 0;
+
+
+.episode-list ul li {
+
+    margin-bottom: 10px;
+
 }
 
-button.prev:hover, button.next:hover {
-    background-color: rgba(0, 0, 0, 0.8);
-}
 
-button.prev a, button.next a {
-    color: white;
+
+a {
+
+    color: #fff;
+
     text-decoration: none;
+
 }
 
-button.prev a:focus, button.next a:focus {
-    outline: none;
+
+
+a:hover {
+
+    text-decoration: underline;
+
 }
 
-/* Estilos específicos para móviles */
-@media screen and (max-width: 768px) {
-    .content {
-        padding: 10px;
+
+
+/* Media Queries */
+
+@media (min-width: 768px) {
+
+    .container {
+
+        width: 70%;
+
     }
 
-    .video-frame iframe {
-        height: 300px; /* Ajuste la altura del video para pantallas pequeñas */
-    }
+    
 
-    .description-box {
-        margin-top: 10px;
-    }
+    .poster, .info {
 
-    .buttons-container {
-        display: flex;
-        justify-content: space-between;
-        width: 100%;
-        margin-top: 10px;
-    }
+        float: left;
 
-    button.prev, button.next {
-        position: static;
-        transform: none;
-        margin: 0;
-        font-size: 1.5em;
-        padding: 5px;
         width: 48%;
+
     }
+
+    
+
+    .poster {
+
+        margin-right: 4%;
+
+        margin-left: 5%;
+
+    }
+
+    
+
+    .info h2, .info p {
+
+        text-align: left;
+
+    }
+
 }
 
-/* Estilos específicos para laptops */
-@media screen and (min-width: 769px) and (max-width: 1024px) {
-    .content {
-        padding: 15px;
+
+
+@media (min-width: 1024px) {
+
+    .container {
+
+        width: 60%;
+
     }
 
-    .video-frame {
-        width: 100%;
+    
+
+    .poster, .info {
+
+        float: left;
+
+        width: 45%;
+
     }
 
-    .video-frame iframe {
-        height: 600px; /* Ajuste la altura del video para pantallas de laptops */
-        width: 100%;  /* Ancho al 100% para laptops */
+    
+
+    .poster {
+
+        margin-right: 5%;
+
+        margin-left: 5%;
+
     }
 
-    .description-box {
-        margin-top: 15px;
-    }
-
-    .buttons-container {
-        display: flex;
-        justify-content: space-between;
-        width: 100%;
-        margin-top: 15px;
-    }
-
-    button.prev, button.next {
-        position: static;
-        transform: none;
-        margin: 0;
-        font-size: 1.75em;
-        padding: 10px;
-        width: 48%;
-    }
 }
