--- a/Styles.css
+++ b/Styles.css
@@ -252,7 +252,9 @@ footer nav a {
 footer nav a:hover {
     background-color: #777;
 }
-
+footer nav a:visited {
+    color: #fff;
+}
 /* Media queries para dispositivos móviles */
 @media screen and (max-width: 480px) {
     header {
